--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Hello World</title>
+    <title>I'm GODNEESS</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Hello
+    FURYYYY
     <script src=".insex.js"></script>
 </body>
 </html>
